fix overflow

--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,6 @@
 * {
   margin: 0px;
   padding: 0px;
-  box-sizing: border-box;
 }
 
 body, input {
@@ -10,6 +9,7 @@ body, input {
 }
 
 body {
+  width: 100vw;
   height: 100vh;
   display: flex;
   flex-direction: column;
@@ -59,15 +59,19 @@ input[type='search']::-webkit-search-cancel-button{
 
 .tumb {
   width: 75px;
+  height: 100px;
   margin: 5px;
   padding: 5px;
   background-color: rgb(10, 10, 10);
 }
 
 .info {
-  margin: 10px;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  
+  width: 100%;
   height: 85%;
-
+  margin: 10px;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -76,8 +80,7 @@ input[type='search']::-webkit-search-cancel-button{
 .info span {
   overflow: hidden;
   text-overflow: ellipsis;
-  white-space: nowrap;
-  width: 70vw;
+
   padding: 5px;
   font-size: 13px;
   border-radius: 5px;
